Fix bug where nav links could be clicked while invisible

--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -97,15 +97,15 @@
   &__nav {
     width: 100vw;
     height: 100vh;
-    top: 0;
+    top: -100vh;
     left: 0;
     position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
     opacity: 0;
-    transition: all 0;
-    transition-delay: 0;
+    transition: opacity 0s 0s;
+    //background-color: red;
   }
 
   &__list {
@@ -133,7 +133,7 @@
   &__checkbox:checked ~ &__nav {
     z-index: 10;
     opacity: 1;
-    transition: all 0.1s;
-    transition-delay: 0.3s;
+    transition: opacity 0.1s 0.3s;
+    top: 0;
   }
 }
